fix: Nav-links with btn-* class text invisible on hover

--- a/projects/hslayers/src/css/hslayers-bootstrap.scss
+++ b/projects/hslayers/src/css/hslayers-bootstrap.scss
@@ -90,6 +90,9 @@ $list-group-item-padding-x: 1.25rem;
    }
   }
 
+  .nav-link[class*='btn-']:hover{
+    color: white;
+  }
 
   /* app css stylesheet */
   .icon-spin {
